--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 </head>
 <body>
   <div class="container">
-      <img src="images/image-qr-code.png" />
-<h2>Improve your front-end skills by building projects</h2>
-<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Zamzam Hassan</a>.
+    <img src="images/image-qr-code.png" />
+  <h2>Improve your front-end skills by building projects</h2>
+  <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
-  </div>
-
+  <p class="footer">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/MissZamzam">Zamzam Hassan</a>.</p>
 </body>
 </html>
